Kaggle Notebook | mcts-catboost | Version 27

--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01cdb30e",
+   "id": "99dcb4e2",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:17.928302Z",
-     "iopub.status.busy": "2024-11-27T22:41:17.927767Z",
-     "iopub.status.idle": "2024-11-27T22:41:20.904046Z",
-     "shell.execute_reply": "2024-11-27T22:41:20.902778Z"
+     "iopub.execute_input": "2024-11-27T22:42:46.158070Z",
+     "iopub.status.busy": "2024-11-27T22:42:46.157533Z",
+     "iopub.status.idle": "2024-11-27T22:42:48.867391Z",
+     "shell.execute_reply": "2024-11-27T22:42:48.866190Z"
     },
     "papermill": {
-     "duration": 2.984075,
-     "end_time": "2024-11-27T22:41:20.906381",
+     "duration": 2.717461,
+     "end_time": "2024-11-27T22:42:48.869623",
      "exception": false,
-     "start_time": "2024-11-27T22:41:17.922306",
+     "start_time": "2024-11-27T22:42:46.152162",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b21cdc",
+   "id": "722417ae",
    "metadata": {
     "papermill": {
-     "duration": 0.002814,
-     "end_time": "2024-11-27T22:41:20.913079",
+     "duration": 0.002789,
+     "end_time": "2024-11-27T22:42:48.875806",
      "exception": false,
-     "start_time": "2024-11-27T22:41:20.910265",
+     "start_time": "2024-11-27T22:42:48.873017",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41a41915",
+   "id": "cab39994",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:20.920508Z",
-     "iopub.status.busy": "2024-11-27T22:41:20.920044Z",
-     "iopub.status.idle": "2024-11-27T22:41:26.203448Z",
-     "shell.execute_reply": "2024-11-27T22:41:26.202283Z"
+     "iopub.execute_input": "2024-11-27T22:42:48.883371Z",
+     "iopub.status.busy": "2024-11-27T22:42:48.882867Z",
+     "iopub.status.idle": "2024-11-27T22:42:53.884396Z",
+     "shell.execute_reply": "2024-11-27T22:42:53.883397Z"
     },
     "papermill": {
-     "duration": 5.29015,
-     "end_time": "2024-11-27T22:41:26.206058",
+     "duration": 5.008514,
+     "end_time": "2024-11-27T22:42:53.887217",
      "exception": false,
-     "start_time": "2024-11-27T22:41:20.915908",
+     "start_time": "2024-11-27T22:42:48.878703",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,8 @@
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_full.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv2.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv23.pkl'\n",
-    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv34.pkl'\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv34.pkl'\n",
+    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_uni90.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -114,19 +115,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a475cc14",
+   "id": "d530fe0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:26.213974Z",
-     "iopub.status.busy": "2024-11-27T22:41:26.213568Z",
-     "iopub.status.idle": "2024-11-27T22:41:26.221058Z",
-     "shell.execute_reply": "2024-11-27T22:41:26.219853Z"
+     "iopub.execute_input": "2024-11-27T22:42:53.895592Z",
+     "iopub.status.busy": "2024-11-27T22:42:53.895255Z",
+     "iopub.status.idle": "2024-11-27T22:42:53.902702Z",
+     "shell.execute_reply": "2024-11-27T22:42:53.901593Z"
     },
     "papermill": {
-     "duration": 0.013584,
-     "end_time": "2024-11-27T22:41:26.222940",
+     "duration": 0.013764,
+     "end_time": "2024-11-27T22:42:53.904744",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.209356",
+     "start_time": "2024-11-27T22:42:53.890980",
      "status": "completed"
     },
     "tags": []
@@ -150,19 +151,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "357246ea",
+   "id": "af67984e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:26.231414Z",
-     "iopub.status.busy": "2024-11-27T22:41:26.231044Z",
-     "iopub.status.idle": "2024-11-27T22:41:26.242535Z",
-     "shell.execute_reply": "2024-11-27T22:41:26.241341Z"
+     "iopub.execute_input": "2024-11-27T22:42:53.913849Z",
+     "iopub.status.busy": "2024-11-27T22:42:53.913467Z",
+     "iopub.status.idle": "2024-11-27T22:42:53.924437Z",
+     "shell.execute_reply": "2024-11-27T22:42:53.923220Z"
     },
     "papermill": {
-     "duration": 0.018434,
-     "end_time": "2024-11-27T22:41:26.244692",
+     "duration": 0.018769,
+     "end_time": "2024-11-27T22:42:53.926954",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.226258",
+     "start_time": "2024-11-27T22:42:53.908185",
      "status": "completed"
     },
     "tags": []
@@ -172,8 +173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 220\n",
-      "len(categorical_cols): 9\n"
+      "len(numerical_cols): 398\n",
+      "len(categorical_cols): 10\n"
      ]
     }
    ],
@@ -261,19 +262,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "551df50d",
+   "id": "bab30962",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:26.252958Z",
-     "iopub.status.busy": "2024-11-27T22:41:26.252551Z",
-     "iopub.status.idle": "2024-11-27T22:41:26.464875Z",
-     "shell.execute_reply": "2024-11-27T22:41:26.463716Z"
+     "iopub.execute_input": "2024-11-27T22:42:53.935126Z",
+     "iopub.status.busy": "2024-11-27T22:42:53.934693Z",
+     "iopub.status.idle": "2024-11-27T22:42:54.188572Z",
+     "shell.execute_reply": "2024-11-27T22:42:54.187364Z"
     },
     "papermill": {
-     "duration": 0.219125,
-     "end_time": "2024-11-27T22:41:26.467095",
+     "duration": 0.260575,
+     "end_time": "2024-11-27T22:42:54.190839",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.247970",
+     "start_time": "2024-11-27T22:42:53.930264",
      "status": "completed"
     },
     "tags": []
@@ -282,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.15178977, -0.15200772, -0.05162869])"
+       "array([ 0.13237058, -0.15197862, -0.00421987])"
       ]
      },
      "execution_count": 5,
@@ -298,13 +299,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e201e3",
+   "id": "138f7da9",
    "metadata": {
     "papermill": {
-     "duration": 0.003161,
-     "end_time": "2024-11-27T22:41:26.473760",
+     "duration": 0.003053,
+     "end_time": "2024-11-27T22:42:54.197374",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.470599",
+     "start_time": "2024-11-27T22:42:54.194321",
      "status": "completed"
     },
     "tags": []
@@ -317,19 +318,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3abbdb85",
+   "id": "013dc184",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:26.482351Z",
-     "iopub.status.busy": "2024-11-27T22:41:26.481888Z",
-     "iopub.status.idle": "2024-11-27T22:41:26.961269Z",
-     "shell.execute_reply": "2024-11-27T22:41:26.960214Z"
+     "iopub.execute_input": "2024-11-27T22:42:54.205712Z",
+     "iopub.status.busy": "2024-11-27T22:42:54.205353Z",
+     "iopub.status.idle": "2024-11-27T22:42:54.695664Z",
+     "shell.execute_reply": "2024-11-27T22:42:54.694671Z"
     },
     "papermill": {
-     "duration": 0.486616,
-     "end_time": "2024-11-27T22:41:26.963729",
+     "duration": 0.497323,
+     "end_time": "2024-11-27T22:42:54.698029",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.477113",
+     "start_time": "2024-11-27T22:42:54.200706",
      "status": "completed"
     },
     "tags": []
@@ -344,19 +345,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea185f4e",
+   "id": "52e2fea2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:26.972840Z",
-     "iopub.status.busy": "2024-11-27T22:41:26.971761Z",
-     "iopub.status.idle": "2024-11-27T22:41:26.977435Z",
-     "shell.execute_reply": "2024-11-27T22:41:26.976501Z"
+     "iopub.execute_input": "2024-11-27T22:42:54.706546Z",
+     "iopub.status.busy": "2024-11-27T22:42:54.706057Z",
+     "iopub.status.idle": "2024-11-27T22:42:54.711442Z",
+     "shell.execute_reply": "2024-11-27T22:42:54.710396Z"
     },
     "papermill": {
-     "duration": 0.012054,
-     "end_time": "2024-11-27T22:41:26.979326",
+     "duration": 0.012056,
+     "end_time": "2024-11-27T22:42:54.713564",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.967272",
+     "start_time": "2024-11-27T22:42:54.701508",
      "status": "completed"
     },
     "tags": []
@@ -373,19 +374,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "52fd023c",
+   "id": "1adf7926",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:41:26.987975Z",
-     "iopub.status.busy": "2024-11-27T22:41:26.987237Z",
-     "iopub.status.idle": "2024-11-27T22:41:27.557102Z",
-     "shell.execute_reply": "2024-11-27T22:41:27.555948Z"
+     "iopub.execute_input": "2024-11-27T22:42:54.722029Z",
+     "iopub.status.busy": "2024-11-27T22:42:54.721503Z",
+     "iopub.status.idle": "2024-11-27T22:42:55.433166Z",
+     "shell.execute_reply": "2024-11-27T22:42:55.432223Z"
     },
     "papermill": {
-     "duration": 0.576905,
-     "end_time": "2024-11-27T22:41:27.559639",
+     "duration": 0.71843,
+     "end_time": "2024-11-27T22:42:55.435440",
      "exception": false,
-     "start_time": "2024-11-27T22:41:26.982734",
+     "start_time": "2024-11-27T22:42:54.717010",
      "status": "completed"
     },
     "tags": []
@@ -407,13 +408,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f32eb3",
+   "id": "82d22e43",
    "metadata": {
     "papermill": {
-     "duration": 0.003962,
-     "end_time": "2024-11-27T22:41:27.567075",
+     "duration": 0.004025,
+     "end_time": "2024-11-27T22:42:55.443028",
      "exception": false,
-     "start_time": "2024-11-27T22:41:27.563113",
+     "start_time": "2024-11-27T22:42:55.439003",
      "status": "completed"
     },
     "tags": []
@@ -463,14 +464,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.199255,
-   "end_time": "2024-11-27T22:41:28.392297",
+   "duration": 12.822642,
+   "end_time": "2024-11-27T22:42:56.268297",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-27T22:41:15.193042",
+   "start_time": "2024-11-27T22:42:43.445655",
    "version": "2.6.0"
   }
  },
