nn-mlp ready to run

--- a/train/nn-mlp.ipynb
+++ b/train/nn-mlp.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "# Load the feature selection results\n",
-    "fs_type = 'full'"
+    "fs_type = 'uni95'"
    ]
   },
   {
@@ -336,6 +336,22 @@
    "source": [
     "cat_input_dims = df_train[categorical_cols].nunique(axis=0).values.tolist()\n",
     "print(cat_input_dims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48466f9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split1 = pickle.load(open('../data/splits/cv1_Game.pkl', 'rb'))\n",
+    "split2 = pickle.load(open('../data/splits/cv2_Game.pkl', 'rb'))\n",
+    "split3 = pickle.load(open('../data/splits/cv3_Game.pkl', 'rb'))\n",
+    "\n",
+    "# split1 = pickle.load(open('../data/splits/cv1_GameRulesetName.pkl', 'rb'))\n",
+    "# split2 = pickle.load(open('../data/splits/cv2_GameRulesetName.pkl', 'rb'))\n",
+    "# split3 = pickle.load(open('../data/splits/cv3_GameRulesetName.pkl', 'rb'))"
    ]
   },
   {
@@ -611,142 +627,251 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the number of folds for cross-validation\n",
-    "split_list = pickle.load(open('../data/splits/cv1_Game.pkl', 'rb'))\n",
-    "\n",
-    "trained_models = list()\n",
-    "lgbm_encoders = list()\n",
-    "oof = pd.DataFrame(index=df_train.index, columns=['utility_agent1_true', 'utility_agent1_pred'])\n",
-    "oof_scores = []\n",
-    "\n",
-    "# Perform cross-validation\n",
-    "for fold, (train_index, val_index) in enumerate(split_list, 1):\n",
-    "    print(f\"Fold {fold}\")\n",
+    "def train_models(\n",
+    "        df_train,\n",
+    "        numerical_cols,\n",
+    "        categorical_cols,\n",
+    "        target='utility_agent1',\n",
+    "        split_list=None,\n",
+    "    ):\n",
+    "    \"\"\"Train multiple MLP models using cross-validation.\n",
     "    \n",
-    "    # Split the data\n",
-    "    X_train  = df_train.iloc[train_index][numerical_cols + categorical_cols]\n",
-    "    y_train = df_train.iloc[train_index]['utility_agent1']\n",
-    "    X_valid = df_train.iloc[val_index][numerical_cols + categorical_cols]\n",
-    "    y_valid = df_train.iloc[val_index]['utility_agent1']\n",
-    "\n",
-    "    lgbm_encoder = LGBMLeavesEncoder(\n",
-    "        num_cols=numerical_cols,\n",
-    "        cat_cols=categorical_cols,\n",
-    "        task='regression',\n",
-    "        n_estimators=100,\n",
-    "        num_leaves=63,\n",
-    "        random_state=2112,\n",
-    "        verbosity=-1,\n",
-    "    )\n",
-    "    lgbm_encoder.fit(X_train, y_train)\n",
-    "    X_train_leaves_lgbm = lgbm_encoder.transform(X_train, verbose=True)\n",
-    "    X_valid_leaves_lgbm = lgbm_encoder.transform(X_valid)\n",
+    "    Args:\n",
+    "        df_train: Training dataframe\n",
+    "        numerical_cols: List of numerical column names\n",
+    "        categorical_cols: List of categorical column names \n",
+    "        target: Target column name\n",
+    "        split_list: List of train/val splits for cross-validation\n",
     "    \n",
-    "    X_train = pd.concat([X_train, X_train_leaves_lgbm], axis=1)\n",
-    "    X_valid = pd.concat([X_valid, X_valid_leaves_lgbm], axis=1) \n",
+    "    Returns:\n",
+    "        trained_models: List of trained MLP models\n",
+    "        lgbm_encoders: List of fitted LGBM encoders\n",
+    "        oof: Out-of-fold predictions dataframe\n",
+    "        oof_scores: List of RMSE scores for each fold\n",
+    "    \"\"\"\n",
+    "    trained_models = list()\n",
+    "    lgbm_encoders = list()\n",
+    "    oof = pd.DataFrame(index=df_train.index, columns=[f'{target}_true', f'{target}_pred'])\n",
+    "    oof_scores = []\n",
     "\n",
-    "    _categorical_cols = (\n",
-    "        categorical_cols + lgbm_encoder.new_columns\n",
-    "    )\n",
-    "    _cat_input_dims = X_train[_categorical_cols].nunique(axis=0).values.tolist()\n",
+    "    # Perform cross-validation\n",
+    "    for fold, (train_index, val_index) in enumerate(split_list, 1):\n",
+    "        print(f\"Fold {fold}\")\n",
+    "        \n",
+    "        # Split the data\n",
+    "        X_train = df_train.iloc[train_index][numerical_cols + categorical_cols]\n",
+    "        y_train = df_train.iloc[train_index][target]\n",
+    "        X_valid = df_train.iloc[val_index][numerical_cols + categorical_cols]\n",
+    "        y_valid = df_train.iloc[val_index][target]\n",
     "\n",
-    "    lgbm_encoders.append(lgbm_encoder)\n",
+    "        lgbm_encoder = LGBMLeavesEncoder(\n",
+    "            num_cols=numerical_cols,\n",
+    "            cat_cols=categorical_cols,\n",
+    "            task='regression',\n",
+    "            n_estimators=100,\n",
+    "            num_leaves=63,\n",
+    "            random_state=2112,\n",
+    "            verbosity=-1,\n",
+    "        )\n",
+    "        lgbm_encoder.fit(X_train, y_train)\n",
+    "        X_train_leaves_lgbm = lgbm_encoder.transform(X_train, verbose=True)\n",
+    "        X_valid_leaves_lgbm = lgbm_encoder.transform(X_valid)\n",
+    "        \n",
+    "        X_train = pd.concat([X_train, X_train_leaves_lgbm], axis=1)\n",
+    "        X_valid = pd.concat([X_valid, X_valid_leaves_lgbm], axis=1) \n",
     "\n",
-    "    train_dataset = TensorDataset(\n",
-    "        torch.tensor(X_train[numerical_cols].values, dtype=torch.float32),\n",
-    "        torch.tensor(X_train[_categorical_cols].values, dtype=torch.int32),\n",
-    "        torch.tensor(y_train.values, dtype=torch.float32)\n",
-    "    )\n",
-    "    train_loader = DataLoader(\n",
-    "        train_dataset,\n",
-    "        batch_size=params['batch_size'],\n",
-    "        shuffle=True,\n",
-    "        num_workers=8,\n",
-    "        persistent_workers=True\n",
-    "    )\n",
+    "        _categorical_cols = (\n",
+    "            categorical_cols + lgbm_encoder.new_columns\n",
+    "        )\n",
+    "        _cat_input_dims = X_train[_categorical_cols].nunique(axis=0).values.tolist()\n",
     "\n",
-    "    valid_dataset = TensorDataset(\n",
-    "        torch.tensor(X_valid[numerical_cols].values, dtype=torch.float32),\n",
-    "        torch.tensor(X_valid[_categorical_cols].values, dtype=torch.int32),\n",
-    "        torch.tensor(y_valid.values, dtype=torch.float32)\n",
-    "    )\n",
-    "    valid_loader = DataLoader(\n",
-    "        valid_dataset,\n",
-    "        batch_size=params['batch_size'],\n",
-    "        shuffle=False,\n",
-    "        num_workers=8,\n",
-    "        persistent_workers=True\n",
-    "    )\n",
+    "        lgbm_encoders.append(lgbm_encoder)\n",
     "\n",
-    "    # Construct the layers string based on input_layer_size and n_layers\n",
-    "    input_layer_size = params['input_layer_size']\n",
-    "    n_layers = params['n_layers']\n",
-    "    layers = \"-\".join([str(input_layer_size // (2 ** i)) for i in range(n_layers)])\n",
+    "        train_dataset = TensorDataset(\n",
+    "            torch.tensor(X_train[numerical_cols].values, dtype=torch.float32),\n",
+    "            torch.tensor(X_train[_categorical_cols].values, dtype=torch.int32),\n",
+    "            torch.tensor(y_train.values, dtype=torch.float32)\n",
+    "        )\n",
+    "        train_loader = DataLoader(\n",
+    "            train_dataset,\n",
+    "            batch_size=params['batch_size'],\n",
+    "            shuffle=True,\n",
+    "            num_workers=8,\n",
+    "            persistent_workers=True\n",
+    "        )\n",
     "\n",
-    "    model = MLP(\n",
-    "        num_input_dim=len(numerical_cols),\n",
-    "        cat_input_dims=_cat_input_dims,\n",
-    "        output_dim=1,\n",
-    "        layers=layers,\n",
-    "        dropout=params['dropout'],\n",
-    "        embedding_dropout=params['embedding_dropout'],\n",
-    "        learning_rate=params['learning_rate'], \n",
-    "        weight_decay=params['weight_decay'],\n",
-    "        initialization=\"kaiming_uniform\",\n",
-    "        pct_start=params[\"pct_start\"],\n",
-    "        div_factor=params[\"div_factor\"],\n",
-    "        final_div_factor=params[\"final_div_factor\"],\n",
-    "    )\n",
-    "    trainer = pl.Trainer(\n",
-    "        # min_epochs=10, \n",
-    "        max_epochs=100, \n",
-    "        # deterministic=True,\n",
-    "        accelerator=\"mps\", \n",
-    "        callbacks=[\n",
-    "            EarlyStopping(\n",
-    "                monitor='val_rmse',\n",
-    "                patience=10,\n",
-    "                mode='min',\n",
-    "                verbose=False\n",
-    "            ), \n",
-    "            LearningRateMonitor(), \n",
-    "            BestValRMSELogger(),\n",
-    "            ModelCheckpoint(monitor='val_rmse', mode='min', save_top_k=1),\n",
-    "        ],\n",
-    "    )\n",
-    "    trainer.fit(\n",
-    "        model, \n",
-    "        train_loader,\n",
-    "        valid_loader,\n",
-    "    )\n",
+    "        valid_dataset = TensorDataset(\n",
+    "            torch.tensor(X_valid[numerical_cols].values, dtype=torch.float32),\n",
+    "            torch.tensor(X_valid[_categorical_cols].values, dtype=torch.int32),\n",
+    "            torch.tensor(y_valid.values, dtype=torch.float32)\n",
+    "        )\n",
+    "        valid_loader = DataLoader(\n",
+    "            valid_dataset,\n",
+    "            batch_size=params['batch_size'],\n",
+    "            shuffle=False,\n",
+    "            num_workers=8,\n",
+    "            persistent_workers=True\n",
+    "        )\n",
     "\n",
-    "    # Load the best model\n",
-    "    best_model_path = trainer.checkpoint_callback.best_model_path\n",
-    "    model = MLP.load_from_checkpoint(best_model_path)\n",
-    "    trained_models.append(model)\n",
+    "        # Construct the layers string based on input_layer_size and n_layers\n",
+    "        input_layer_size = params['input_layer_size']\n",
+    "        n_layers = params['n_layers']\n",
+    "        layers = \"-\".join([str(input_layer_size // (2 ** i)) for i in range(n_layers)])\n",
     "\n",
-    "    # Predict on validation set using trainer.predict with the prediction DataLoader\n",
-    "    predictions = trainer.predict(model, dataloaders=valid_loader)\n",
-    "    y_pred = torch.cat(predictions).squeeze().cpu().numpy()\n",
-    "     \n",
-    "    # Compute RMSE on scaled values\n",
-    "    y_valid = y_valid.values\n",
-    "    rmse = np.sqrt(np.mean((y_pred - y_valid) ** 2))\n",
-    "    print(f\"Fold {fold} - RMSE: {rmse}\")\n",
+    "        model = MLP(\n",
+    "            num_input_dim=len(numerical_cols),\n",
+    "            cat_input_dims=_cat_input_dims,\n",
+    "            output_dim=1,\n",
+    "            layers=layers,\n",
+    "            dropout=params['dropout'],\n",
+    "            embedding_dropout=params['embedding_dropout'],\n",
+    "            learning_rate=params['learning_rate'], \n",
+    "            weight_decay=params['weight_decay'],\n",
+    "            initialization=\"kaiming_uniform\",\n",
+    "            pct_start=params[\"pct_start\"],\n",
+    "            div_factor=params[\"div_factor\"],\n",
+    "            final_div_factor=params[\"final_div_factor\"],\n",
+    "        )\n",
+    "        trainer = pl.Trainer(\n",
+    "            max_epochs=100,\n",
+    "            accelerator=\"mps\", \n",
+    "            callbacks=[\n",
+    "                EarlyStopping(\n",
+    "                    monitor='val_rmse',\n",
+    "                    patience=10,\n",
+    "                    mode='min',\n",
+    "                    verbose=False\n",
+    "                ), \n",
+    "                LearningRateMonitor(), \n",
+    "                BestValRMSELogger(),\n",
+    "                ModelCheckpoint(monitor='val_rmse', mode='min', save_top_k=1),\n",
+    "            ],\n",
+    "        )\n",
+    "        trainer.fit(\n",
+    "            model, \n",
+    "            train_loader,\n",
+    "            valid_loader,\n",
+    "        )\n",
     "\n",
-    "    # Save out-of-fold predictions\n",
-    "    oof.loc[val_index, 'utility_agent1_true'] = y_valid\n",
-    "    oof.loc[val_index, 'utility_agent1_pred'] = y_pred\n",
-    "    oof.loc[val_index, 'fold'] = fold\n",
+    "        # Load the best model\n",
+    "        best_model_path = trainer.checkpoint_callback.best_model_path\n",
+    "        model = MLP.load_from_checkpoint(best_model_path)\n",
+    "        trained_models.append(model)\n",
     "\n",
-    "    # Save RMSE to the list\n",
-    "    oof_scores.append(rmse)\n",
+    "        # Predict on validation set using trainer.predict with the prediction DataLoader\n",
+    "        predictions = trainer.predict(model, dataloaders=valid_loader)\n",
+    "        y_pred = torch.cat(predictions).squeeze().cpu().numpy()\n",
+    "         \n",
+    "        # Compute RMSE on scaled values\n",
+    "        y_valid = y_valid.values\n",
+    "        rmse = np.sqrt(np.mean((y_pred - y_valid) ** 2))\n",
+    "        print(f\"Fold {fold} - RMSE: {rmse}\")\n",
     "\n",
-    "# Print the list of oof scores and average oof score\n",
-    "print(\"List of oof scores:\", oof_scores)\n",
-    "print(\"Average oof score:\", np.mean(oof_scores))\n",
+    "        # Save out-of-fold predictions\n",
+    "        oof.loc[val_index, f'{target}_true'] = y_valid\n",
+    "        oof.loc[val_index, f'{target}_pred'] = y_pred\n",
+    "        oof.loc[val_index, 'fold'] = fold\n",
     "\n",
-    "oof.to_parquet(path_results / f'oof_nn-mlp_{fs_type}_cv1.parquet', index=False)"
+    "        # Save RMSE to the list\n",
+    "        oof_scores.append(rmse)\n",
+    "\n",
+    "    # Print the list of oof scores and average oof score\n",
+    "    print(\"List of oof scores:\", oof_scores)\n",
+    "    print(\"Average oof score:\", np.mean(oof_scores))\n",
+    "\n",
+    "    return trained_models, lgbm_encoders, oof, oof_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b6f66e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# call the function\n",
+    "trained_models1, lgbm_encoders1, oof1, oof_scores1 = train_models(\n",
+    "    df_train, \n",
+    "    numerical_cols, \n",
+    "    categorical_cols,\n",
+    "    target='utility_agent1',\n",
+    "    split_list=split1,\n",
+    ")\n",
+    "# save oof predictions\n",
+    "oof1.to_parquet(path_results / f'oof_nn-mlp_{fs_type}_cv1.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff21dee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# call the function\n",
+    "trained_models2, lgbm_encoders2, oof2, oof_scores2 = train_models(\n",
+    "    df_train, \n",
+    "    numerical_cols, \n",
+    "    categorical_cols, \n",
+    "    target='utility_agent1',\n",
+    "    split_list=split2,\n",
+    ")\n",
+    "# save oof predictions\n",
+    "oof2.to_parquet(path_results / f'oof_nn-mlp_{fs_type}_cv2.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "960a5202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# call the function\n",
+    "trained_models3, lgbm_encoders3, oof3, oof_scores3 = train_models(\n",
+    "    df_train, \n",
+    "    numerical_cols, \n",
+    "    categorical_cols, \n",
+    "    target='utility_agent1',\n",
+    "    split_list=split3,\n",
+    ")\n",
+    "# save oof predictions\n",
+    "oof3.to_parquet(path_results / f'oof_nn-mlp_{fs_type}_cv3.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd266cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_models = [*trained_models1, *trained_models2, *trained_models3]\n",
+    "lgbm_encoders = [*lgbm_encoders1, *lgbm_encoders2, *lgbm_encoders3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7eabae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print summary of OOF scores for each CV fold\n",
+    "print(\"CV1 OOF Scores:\")\n",
+    "for score in oof_scores1:\n",
+    "    print(f\"Score: {score:.4f}\")\n",
+    "print(f\"Average CV1 Score: {sum(oof_scores1)/len(oof_scores1):.4f}\")\n",
+    "    \n",
+    "print(\"\\nCV2 OOF Scores:\")  \n",
+    "for score in oof_scores2:\n",
+    "    print(f\"Score: {score:.4f}\")\n",
+    "print(f\"Average CV2 Score: {sum(oof_scores2)/len(oof_scores2):.4f}\")\n",
+    "    \n",
+    "print(\"\\nCV3 OOF Scores:\")\n",
+    "for score in oof_scores3:\n",
+    "    print(f\"Score: {score:.4f}\")\n",
+    "print(f\"Average CV3 Score: {sum(oof_scores3)/len(oof_scores3):.4f}\")"
    ]
   },
   {
@@ -771,8 +896,8 @@
    },
    "outputs": [],
    "source": [
-    "plt.hist(oof['utility_agent1_true'], alpha=0.5, label='Target')\n",
-    "plt.hist(oof['utility_agent1_pred'], alpha=0.5, label='Prediction')\n",
+    "plt.hist(oof1['utility_agent1_true'], alpha=0.5, label='Target')\n",
+    "plt.hist(oof1['utility_agent1_pred'], alpha=0.5, label='Prediction')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -873,6 +998,10 @@
     "            test_processed[numerical_cols+categorical_cols]\n",
     "        )\n",
     "        X_test_cat = pd.concat([X_test_cat, lgbm_features], axis=1)\n",
+    "\n",
+    "        _categorical_cols = (\n",
+    "            categorical_cols + lgbm_encoder.new_columns\n",
+    "        )\n",
     "\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
@@ -986,7 +1115,6 @@
     "    'models_hparams': [model.hparams for model in trained_models],\n",
     "    'numerical_cols': numerical_cols,\n",
     "    'categorical_cols': categorical_cols,\n",
-    "    '_categorical_cols': _categorical_cols,\n",
     "    'encoder': encoder,\n",
     "    'scaler': scaler,\n",
     "    'lgbm_encoders': lgbm_encoders\n",
@@ -1028,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   },
   "papermill": {
    "default_parameters": {},
